--- a/views/B2B/Transportista/b2b_factura_edita_of.html
+++ b/views/B2B/Transportista/b2b_factura_edita_of.html
@@ -151,6 +151,7 @@
                         <p>
                             <button class="btn btn-success"  ui-sref="app.b2b.transportista.agrega_of">Agregar Vije</button>
 							<button class="btn btn-info"  ui-sref="app.b2b.transportista.factura">Cancelar</button>
+							<button class="btn btn-warning"  ui-sref="app.b2b.transportista.factura">Generar OF</button>
                         </p>
                     </div>
                 </div>
