--- a/views/Consulta/Viajes/det_troncal.html
+++ b/views/Consulta/Viajes/det_troncal.html
@@ -62,7 +62,24 @@
                             </div>
                         </div>
 
-                       
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Usuario Objeta</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="José Pérez" />
+                            </div>
+                            <label class="col-md-2 control-label">Fecha Objeci&oacute;n</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="20/03/2017" />
+                            </div>
+                        </div>
+
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Observaci&oacute;n Objeci&oacute;n</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Se obejeto porque sí, autoriza E.Saavedra." />
+                            </div>
+                            
+                        </div>
                     </form>
                 </div>
 
@@ -91,6 +108,7 @@
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha MC</th>
+							<th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -100,6 +118,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
+							<td><input type="checkbox" value="es"> </td>
 
                         </tr>
 						<tr class="odd gradeX">
@@ -108,7 +127,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>40 TALCA</td>
                             <td>20/03/2017</td>
-
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10023</td>
@@ -116,7 +135,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10024</td>
@@ -124,7 +143,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-
+<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
                         </tbody>
@@ -136,7 +155,9 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-info" >Cancelar</button>
+                            <button class="btn btn-success" >Aprobar</button>
+							<button class="btn btn-danger" >Rechazar</button>
+							<button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
                 </div>
