--- a/views/Consulta/Viajes/det_um.html
+++ b/views/Consulta/Viajes/det_um.html
@@ -57,7 +57,25 @@
                                 <input type="text" class="form-control" placeholder="20/03/2017" />
                             </div>
                         </div>
-                       
+						
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Usuario Objeta</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="José Pérez" />
+                            </div>
+                            <label class="col-md-2 control-label">Fecha Objeci&oacute;n</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="20/03/2017" />
+                            </div>
+                        </div>
+
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Observaci&oacute;n Objeci&oacute;n</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" placeholder="Se obejeto porque sí, autoriza E.Saavedra." />
+                            </div>
+                            
+                        </div>
                        
                     </form>
                 </div>
@@ -87,6 +105,7 @@
                             <th>ND</th>
                             <th>Estado ND</th>
                             <th>Tarifa</th>
+							<th>&nbsp;</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -95,28 +114,32 @@
                             <td>Cerrada</td>
 							<td>5050</td>
                             <td>Entregado</td>
-                            <td>5.990</td>
+                            <td><input type="text" class="form-control" placeholder="5.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10022</td>
                             <td>Cerrada</td>
 							<td>5051</td>
                             <td>Entregado</td>
-                            <td>3.990</td>
+                            <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10023</td>
                             <td>Cerrada</td>
 							<td>5052</td>
                             <td>Entregado</td>
-                            <td>5.990</td>
+                            <td><input type="text" class="form-control" placeholder="5.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10024</td>
                             <td>Cerrada</td>
 							<td>5053</td>
                             <td>Entregado</td>
-                            <td>3.990</td>
+                            <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
                         </tbody>
@@ -128,7 +151,9 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-info" >Cancelar</button>
+                            <button class="btn btn-success" >Aprobar</button>
+							<button class="btn btn-danger" >Rechazar</button>
+							<button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
                 </div>
