--- a/views/Facturacion/Aprobacion/apre_trn.html
+++ b/views/Facturacion/Aprobacion/apre_trn.html
@@ -5,7 +5,7 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Facturación</a></li>
-        <li><a href="javascript:;">Aprueba OF</a></li>
+        <li><a href="javascript:;">Aprueba </a></li>
         <li class="active">20101 - Aprueba Orden de Facturación</li>
     </ol>
     <!-- end breadcrumb -->
@@ -24,13 +24,13 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Aprueba / Rechaza  OF</h4>
+                    <h4 class="panel-title">Aprueba / Rechaza  Orden de Facturacion</h4>
                 </div>
 
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">N&uacute;mero de OF</label>
+                            <label class="col-md-3 control-label">N&uacute;mero de Orden de Facturación</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="10000" readonly="readonly"/>
                             </div>
@@ -39,8 +39,6 @@
                                 <input type="text" class="form-control" placeholder="TRANSPORTES DEL PACIFICO" readonly="readonly"/>
                             </div>
                         </div>
-
-                        
                         
                         <div class="form-group">
                             <label class="col-md-3 control-label">N&uacute;mero de Viaje</label>
@@ -53,7 +51,26 @@
                             </div>
                         </div>
 
-                         <div class="form-group">
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Tipo de Cobro</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CARGA COMPLETA" />
+                            </div>
+                            <label class="col-md-3 control-label">Fecha de Viaje</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="20/03/2017" readonly="readonly" />
+                            </div>
+                        </div>
+						
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Fecha de Cierre</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="20/03/2017" />
+                            </div>
+                            
+                        </div>
+						
+                        <div class="form-group">
 							
                             <!-- <label class="col-md-3 control-label">Acciones:</label> -->
                             <div class="col-md-12"> 
@@ -89,7 +106,7 @@
                         </div>
 						
 						<div class="form-group">
-                            <label class="col-md-3 control-label">Monto de OF</label>
+                            <label class="col-md-3 control-label">Monto Orden de Facturación</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="360.500" readonly="readonly"/>
                             </div>
