--- a/views/Mantenedores/Tarifa/Troncal/agregar.html
+++ b/views/Mantenedores/Tarifa/Troncal/agregar.html
@@ -4,12 +4,12 @@
         <li><a ui-sref="app.dashboard">Home</a></li>
         <li><a href="javascript:;">Mantenedores</a></li>
         <li><a href="javascript:;">Tarifa</a></li>
-        <li><a href="javascript:;">UM/DDC</a></li>
+        <li><a href="javascript:;">MOD</a></li>
         <li class="active">40501 - Crear</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tarifa UM/DDC<small> Gestión de Mantenedores</small></h1>
+    <h1 class="page-header">Tarifa SEV<small> Gestión de Mantenedores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -34,27 +34,13 @@
                             <label class="col-md-3 control-label">Tipo Viaje</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>UM</option>
-                                    <option>DDC</option>
+                                    <option>SEV</option>
+                                    <option>sadfasdf</option>
                                 </select>
                             </div>
-                        </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Origen</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>55 - CD - SANTIAGO</option>
-                                    <option>59 - CD - ANTOFAGASTA</option>
-                                </select>
-                            </div>
-							<label class="col-md-3 control-label">Destino</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>13 - TI - TALCA</option>
-                                    <option>15 - TI - PUERTO MONTT</option>
-                                </select>
-                            </div>
+                        
+                           
+							
                         </div>
 						
 						<div class="form-group">
@@ -67,19 +53,26 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
-							 <label class="col-md-3 control-label">Estado</label>
+							
+                        </div>
+						<div class="form-group">							
+                            <label class="col-md-3 control-label">Tipo de Servicio</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
+                                    <option>1 - Grua</option>
+                                    <option>2 - Escolta</option>
+
                                 </select>
                             </div>
                         </div>
-						
-						
-                        <div class="form-group">
+						<div class="form-group">
+							<label class="col-md-3 control-label">Valor</label>
+                            <div class="col-md-2">
+                                <input type="number" class="form-control" placeholder="" />
+                            </div>
+						</div>
+                        
+						<div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Inicio</label>
                             <div class="col-md-2">
                                 <p class="input-group">
@@ -100,57 +93,14 @@
                                 </p>
                             </div>
                         </div>
-						
 						<div class="form-group">
-                            <label class="col-md-3 control-label">Metodo</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>12 Transportes Montes</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-							<label class="col-md-3 control-label">Categoria</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>12 Transportes Montes</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-                        </div>
-						
-
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">NS</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>Si</option>
-                                    <option>No</option>
-
-                                </select>
-                            </div>
-							
-							<label class="col-md-3 control-label">Valor</label>
-                            <div class="col-md-2">
-                                <input type="number" class="form-control" placeholder="" />
-                            </div>
-                            
-                        </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Tarifa</label>
-                            <div class="col-md-2">
-                                <input type="number" class="form-control" placeholder="123434" />
-                            </div>
-							
 							<label class="col-md-3 control-label">Estado</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>HABILITADA</option>
-                                    <option>SUSPENDIDA</option>
+                                    <option>2 Transportes Pipau</option>
+                                    <option>3 Transportes del Pacifico</option>
+                                    <option>Otro</option>
                                 </select>
                             </div>
                         </div>
