--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -47,7 +47,23 @@
                                 </select>
                             </div>
                         </div>
-
+						<div class="form-group">
+                            <label class="col-md-3 control-label">Transportista</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>12 Transportes Montes</option>
+                                    <option>2 Transportes Pipau</option>
+                                    <option>3 Transportes del Pacifico</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+					    <div class="form-group">
+                            <label class="col-md-3 control-label">Tarifa Unitaria </label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="50000" ng-model="monet_nombre" />
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Responsable</label>
                             <div class="col-md-9">
